fixed wrong index.html

--- a/src/app.yaml
+++ b/src/app.yaml
@@ -49,8 +49,8 @@ handlers:
   static_dir: static/smicons
 
 - url: /index.html
-  static_files: static/index.html
-  upload: static/index.html
+  static_files: static/index_new.html
+  upload: static/index_new.html
 
 - url: /
   static_files: static/index_new.html
